<resources>
    <string name="app_name">Denuncias</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="loren">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec convallis ante a ex condimentum, non placerat ex tempor.</string>
    <string name="back_dialog">voltar</string>
    <string name="go_dialog">ver</string>

    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="pass">Senha</string>
    <string name="confirmPass">Confirmar senha</string>
    <string name="signUp">Registrar</string>
    <string name="denucniar">Denunciar</string>
    <string name="save">Salvar</string>
    <string name="register">Não possui conta? Crie uma</string>
    <string name="login">Login</string>

    <!--Create-->
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="photoContent">Foto para publicação da denúncia</string>
    <string-array name="categories">
        <item>Iluminação</item>
        <item>Lixo</item>
        <item>Ruas e Calçadas</item>
        <item>Espaços Públicos</item>
        <item>Transporte Público</item>
    </string-array>
    <string name="current_place">Obter a localização atual</string>
    <string name="open_map">Abrir mapa</string>
    <string name="iluminação">Iluminação</string>
    <string name="lixo">Lixo</string>
    <string name="ruas_e_Calçadas">Ruas e Calçadas</string>
    <string name="espacos_publicos">Espaços Públicos</string>
    <string name="transporte_publico">Transporte Público</string>

</resources>
